<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddy Finder</string>
    <string name="app_id">778213102264255</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your profile by logging in with the buttons below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="actionbar_title">ParallaxHeaderViewPager</string>
    <string name="verify">Verify Number</string>
    <string name="wait_for_verification">It will take some time for verfication. Please be patient...</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="welocome">Welcome!</string>
    <string name="Movie">Movie</string>
    <string name="Coffee">Coffee</string>
    <string name="Outstation">Outstation</string>
    <string name="Others">Others</string>
    <string name="createEvent">Create a new event</string>
    <string name="eventTitle">Title...</string>
    <string name="eventBody">Write about event...</string>
    <string name="eventcreatebutton">Create Event</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Events</item>
        <item >Profile</item>
        <item >Setting</item>        
    </string-array>
    
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
    </array>
    
    <string
        name="buttontext_simpleemail">Send plain text</string>
    <string
        name="chooser">Send message using:</string>
    <string
        name="chooser_pic">Send picture using:</string>
    <string
        name="buttontext_simpleemail_chooser">Send a message (Choose app to send)
    </string>
    <string
        name="buttontext_email">Send plaintext message (with supplied content)
    </string>
    <string
        name="buttontext_feedback">Send feedback message (with form)
    </string>
    <string
        name="buttontext_msg_pic">Send picture msg (with supplied content)
    </string>
    <string
        name="email_message">This is my message body.\n\nCheers,\nMe
    </string>
    <string
        name="email_subject">This is my subject</string>
    <string
        name="email_address">test@fakehost.com</string>
    <string
        name="email_address_cc">test_cc@fakehost.com</string>
    <string
        name="email_address_bcc">test_bcc@fakehost.com</string>

    <string
        name="feedbacktitle">Enter feedback details to send to the developer:
    </string>
    <string
        name="feedbackname">Your Name</string>
    <string
        name="feedbackemail">Your Email</string>
    <string
        name="feedbackbody">Feedback Details...</string>
    <string
        name="feedbackresponse">Would you like an email response?</string>
    <string
        name="feedbackbutton">Send Feedback</string>
    <string
        name="feedbacktype">Enter feedback type...</string>

    <string
        name="feedbacktype1">Praise</string>
    <string
        name="feedbacktype2">Gripe</string>
    <string
        name="feedbacktype3">Suggestion</string>
    <string
        name="feedbacktype4">Bug</string>
    <string
        name="feedbackmessagebody_format">To: The %1$s Department\n\n %2$s\n\n %3$s (%4$s) - %5$s
    </string>
    <string
        name="feedbackmessagebody_responseyes">Requires a response</string>
    <string
        name="feedbackmessagebody_responseno">Does not require a response</string>
    <string
        name="feedbackmessagesubject_format">Application Feedback (%1$s)</string>

</resources>
