<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/CreateEventTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createEvent"
            android:layout_margin="5dp"
            android:textSize="10pt"></TextView>


        <EditText
            android:id="@+id/EditTextTitle"
            android:layout_height="wrap_content"
            android:hint="@string/eventTitle"
            android:layout_margin="5dp"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"></EditText>

        

       

        <EditText
            android:id="@+id/EventBody"
            android:layout_height="wrap_content"
            android:hint="@string/eventBody"
            android:inputType="textMultiLine"
            android:layout_margin="5dp"
            android:lines="5"
            android:layout_width="fill_parent">
            
        </EditText>
        
         <Spinner
            android:id="@+id/categorySpinner"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbacktype"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:entries="@array/feedbacktypelist"></Spinner>

         <Button
             android:id="@+id/getEventsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Get Events" />

        <Button
            android:id="@+id/eventCreateButton"
            android:layout_height="wrap_content"
            android:text="@string/eventcreatebutton"
            android:onClick="sendFeedback"
            android:layout_margin="5dp"
            android:layout_width="fill_parent"></Button>

    </LinearLayout>
</ScrollView>
